--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,16 @@ edition = "2021"
 [dependencies]
 axum = "0.6"
 tokio = { version = "1.0", features = ["full"] }
+sqlx = { version = "0.6", features = [
+    "postgres",
+    "runtime-tokio-rustls",
+    "json",
+] }
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 tracing = "0.1"
 tracing-subscriber = "0.3"
+
+dotenv = "0.15"
