--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,9 @@ sqlx = { version = "0.6", features = [
     "runtime-tokio-rustls",
     "json",
 ] }
-
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-
 tracing = "0.1"
 tracing-subscriber = "0.3"
-
 dotenv = "0.15"
+clap = { version = "4.0", features = ["derive"]}
